# amplifier-collection-switchboard

./: .gitignore  MIGRATION_PLAN.md  README.md  pyproject.toml
agents/: daily-planner.md  gtd-helper.md  knowledge-curator.md
amplifier_collection_switchboard/: __init__.py  pyproject.toml
context/: SWITCHBOARD-GUIDE.md  WORKFLOW-PATTERNS.md
profiles/: dev-sb.md  dev-switchboard.md  sb.md  switchboard.md
tools/do/: README.md  pyproject.toml
tools/do/src/do/: __init__.py  blog.py  cli.py  daily.py  gtd.py  knowledge.py  knowledge_service.py  pres.py  pres_service.py  pres_storage.py  read_service.py  reading.py  reminders.py  repos.py  repos_service.py  repos_storage.py  service.py  transcribe.py  web2md.py
tools/tool-dailynotes/: README.md  pyproject.toml
tools/tool-dailynotes/src/dailynotes/: __init__.py  calendar.py  cli.py  generator.py  projects.py
tools/tool-gtd/: README.md  pyproject.toml
tools/tool-gtd/src/gtd/: cli.py  dashboard.py  service.py
tools/tool-knowledge/: README.md  pyproject.toml
tools/tool-knowledge/src/knowledge/: __init__.py  cli.py  service.py  storage.py
tools/tool-presentations/: README.md  pyproject.toml
tools/tool-presentations/src/presentations/: __init__.py  cli.py  service.py
tools/tool-reading/: README.md  pyproject.toml
tools/tool-reading/src/reading/: __init__.py  cli.py  service.py  storage.py
tools/tool-repos/: README.md  pyproject.toml
tools/tool-repos/src/repos/: __init__.py  cli.py  service.py
tools/tool-transcribe/: README.md  pyproject.toml
tools/tool-transcribe/src/transcribe/: __init__.py  audio_extractor.py  cli.py  file_io.py  index_generator.py  insights_generator.py  logger.py  paths.py  quote_extractor.py  state.py  storage.py  summary_generator.py  transcript_formatter.py  video_loader.py  whisper_transcriber.py
tools/tool-web2md/: README.md  pyproject.toml
tools/tool-web2md/src/web2md/: __init__.py  cli.py  converter.py  enhancer.py  fetcher.py  image_handler.py  indexer.py  logger.py  organizer.py  state.py  validator.py
