[project]
name = "do-cli"
version = "1.0.0"
description = "Unified personal workflow CLI - daily notes, GTD, presentations, reading, knowledge, repos"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "click>=8.1.0",
]

[project.scripts]
do = "do.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/do"]
