[project]
name = "dailynotes"
version = "2.0.0"
description = "Wrapper for obs-dailynotes - daily note generation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "click>=8.1.0",
]

[project.scripts]
dailynotes = "dailynotes.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dailynotes"]
