[project]
name = "presentations"
version = "1.0.0"
description = "Track presentations with priorities and deadlines"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "click>=8.1.0",
]

[project.scripts]
presentations = "presentations.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/presentations"]
