[project]
name = "reading"
version = "1.0.0"
description = "Reading queue management for URLs and PDFs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "click>=8.1.0",
]

[project.scripts]
reading = "reading.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reading"]
