[project]
name = "repos"
version = "1.0.0"
description = "Multi-repository sync and status tracking"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "click>=8.1.0",
]

[project.scripts]
repos = "repos.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/repos"]
