[project]
name = "transcribe"
version = "1.0.0"
description = "Transcribe YouTube videos and audio files to searchable markdown"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "click>=8.1.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "yt-dlp>=2024.0.0",
]

[project.scripts]
transcribe = "transcribe.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transcribe"]
